--- a/blog/20241227.md
+++ b/blog/20241227.md
@@ -86,3 +86,5 @@
 ├── .env // 環境ファイル（firebaseのAPIキーなど）
 └── ：　各種初期ファイル
 ```
+
+<a href="https://github.com/sumicoder/public-environment-construction/blob/main/blog/20241228.md">悩んだ点</a>
