ブログ追加

--- a/blog/20241227.md
+++ b/blog/20241227.md
@@ -18,8 +18,7 @@
 
 ## 設計
 
-アプリ開発の前にするべきでしたが、とりあえず手を動かそうと思い<br>
-何もかも行き当たりばったりで進めました。
+アプリ開発の前にするべきでしたが、とりあえず手を動かそうと思い何もかも行き当たりばったりで進めました。
 
 後からコードの整理をしたのですが、React の理解が怪しい部分があったので、最初から手を動かすことは間違っていなかったと感じました。
 
@@ -71,12 +70,11 @@
 │   │   ├── hightlightPreview.ts // プレビューハイライト用の関数
 │   │   └── templatePageContent.ts // 生成ファイルの中身を返す関数
 │   ├── 📂 initSetting/
-│   │   ├── ：
 │   │   └── 各種オプションを挿入する文字列のファイル
 │   ├── 📂 lib/
-│   │   └── firebase.ts // firebaseとの接続用ファイル
+│   │   ├── firebase.ts // firebaseとの接続用ファイル
+│   │   └── gemini.ts // geminiとの接続用ファイル
 │   ├── 📂 types/
-│   │   ├── ：
 │   │   └── 各種型定義ファイル.d.ts
 │   ├── App.tsx // メインアプリケーション
 │   ├── input.css // Tailwindのinput.css
@@ -87,4 +85,6 @@
 └── ：　各種初期ファイル
 ```
 
-<a href="https://github.com/sumicoder/public-environment-construction/blob/main/blog/20241228.md">悩んだ点</a>
+---
+
+次の記事：<a href="https://github.com/sumicoder/public-environment-construction/blob/main/blog/20241228.md">悩んだ点 ></a>
