使用するGutenbergブロックを制限する機能追加

--- a/blog/20241228.md
+++ b/blog/20241228.md
@@ -2,7 +2,7 @@
 
 ## 非同期処理
 
-非同期処理の中ではuseStateがうまく動かずに苦戦
+非同期処理の中では useState がうまく動かずに苦戦
 
 ファイルをダウンロードする時に圧縮するロジックを組みたかったので
 ライブラリの`JSZip`を使用
@@ -10,8 +10,25 @@
 最初は追加オプションをダウンロードするロジック内で書いていたので問題なかったが<br>
 後述するプレビュー機能実装時に、関数の外に出した。
 
-その結果、追加オプションの条件がtrueのものを、useStateを使用して<br>
-値を書き換えたかったのですが、どうやらひ非同期処理の内部ではuseStateは使えないみたいだった。
+その結果、追加オプションの条件が true のものを、useState を使用して<br>
+値を書き換えたかったのですが、どうやら非同期処理の内部では useState は使えないみたいだった。
 
 ## プレビュー機能
 
+-   追加オプションをホバー時にプレビューする機能を追加
+
+プレビューする文字列と上記の zip するオブジェクトを一つのオブジェクトで実装したかったため、zip する関数の外に出した。
+
+useState を使用せず、通常のグローバル変数`let`で文字列を管理することでプレビューに使う文字列と zip する関数内で使用するオブジェクトを統一することができた。
+
+-   リアルタイムプレビュー
+
+追加オプション以外のプレビューは通常通り文字列を生成する関数を使用して useState でリアルタイムで更新されるようにした
+
+-   シンタックスハイライト
+
+`highlight.js`を使用して実装
+
+useEffect を使用することで要素が更新されたタイミングで都度ハイライトを更新することにした
+
+次の記事：<a href="https://github.com/sumicoder/public-environment-construction/blob/main/blog/20250110.md">悩んだ点 ></a>
